Filmstrip - overflow y fixed for touch devices

--- a/assets/scss/5-components/_site-content.scss
+++ b/assets/scss/5-components/_site-content.scss
@@ -7,6 +7,7 @@
 
     .touch & {
         overflow-x: auto;
+        overflow-y: hidden;
     }
 
     &__mask {
